# Project-Rust

./: .gitignore  README.md  target-triple.md
Associated-Functions/: readme.md
StackAndHeap/example2/: readme.md
cargo-fix/autofix/: Cargo.toml  readme.md
cargo-fix/autofix/src/: main.rs
constrainTypes/: readme.md
constrainTypes/associatedTypeBounds/: Cargo.toml
constrainTypes/associatedTypeBounds2/: Cargo.toml
constrainTypes/lifetimeBounds/: Cargo.toml
constrainTypes/trait-bounds/: Cargo.toml  readme.md
constrainTypes/type-bounds/: Cargo.toml
constrainTypes/whereClauses/: Cargo.toml
crate-features/draw/: Cargo.toml
crate-features/features-1/: Cargo.toml
crate-features/my_crate/: Cargo.toml
crate-features/print_somthing/: Cargo.toml
crate-features/test-crate2/: Cargo.toml
crate-features/test_crates/: Cargo.toml
crate-features/test_crates/src/: main.rs
declarative-macros/: README.md
declarative-macros/src/: lib.rs
declerative/: README.md
dynamic-dispatch/: readme.md
dynamic-dispatch/example1/: Cargo.toml
guessing-game/: Cargo.toml
hello_macro/: README.md
lifetime/str-example/: Cargo.toml  readme.md
macros/attribute-like/: Cargo.toml
macros/declerative/: Cargo.toml
methods/: readme.md
pancakes/: Cargo.toml
stackAndHeap/example1/: readme.md
structure/example1/: readme.md
structure/instancesfromOtherInstances/: Cargo.toml
test/: new.rs  txt.rs
trait-object/: readme.md
traits/examp/: Cargo.toml
traits/example-circle/: Cargo.toml
variables/parser2/: Cargo.toml
variables/wrapperType/: Cargo.toml
(+55 files in other folders)
