[package]
name = "test_crates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
print_somthing = { path = "../print_somthing", features = ["xyz"] }
my_crate = { path="../my_crate", features=["xyz"]}


[features]


